fix nav mobile (z-index)

--- a/src/assets/scss/footer/_footer.scss
+++ b/src/assets/scss/footer/_footer.scss
@@ -1,4 +1,6 @@
 .footer {
+  position: relative;
+  z-index: $zIndexSectionContent;
   font-size: px(18);
 
   @include l_desktop {
