--- a/src/assets/scss/footer/footer_bottom/_footer-bottom.scss
+++ b/src/assets/scss/footer/footer_bottom/_footer-bottom.scss
@@ -1,3 +1,8 @@
+footer {
+  position: relative;
+  z-index: $zIndexSectionContent;
+}
+
 .footer-bottom-grid {
   display: flex;
   flex-wrap: wrap;
