--- a/src/assets/scss/pages/home/team_section/_team_section.scss
+++ b/src/assets/scss/pages/home/team_section/_team_section.scss
@@ -1,3 +1,8 @@
+.team {
+  position: relative;
+  z-index: $zIndexSectionContent;
+}
+
 @import "/__team-grid.scss";
 @import "/__team-members.scss";
 @import "/__team-container.scss"; 
